--- a/src/KKS_ConfigurationManager/packages.config
+++ b/src/KKS_ConfigurationManager/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BepInEx.ConfigurationManager" version="16.3.0" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.4.15" targetFramework="net35" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.5.4" targetFramework="net35" />
-  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" version="2021.8.27.2" targetFramework="net46" />
-  <package id="IllusionLibs.KoikatsuSunshine.UniTask" version="2021.8.27.2" targetFramework="net46" />
+  <package id="BepInEx.ConfigurationManager" version="18.2.0" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" version="2021.9.17" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UniTask" version="2021.9.17" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.Unity.TextMeshPro" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.AudioModule" version="2019.4.9" targetFramework="net35" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.CoreModule" version="2019.4.9" targetFramework="net35" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.IMGUIModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.UI" version="2019.4.9" targetFramework="net35" />
+  <package id="Unity.InputSystem" version="1.5.0" targetFramework="net46" />
 </packages>
